--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,3 +51,24 @@ h2 {
 .main > * {
   margin-bottom: 20px;
 }
+
+.menu {
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 10px;
+  width: 50%;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.menu-item {
+  height: 200px;
+  border: 1px solid white;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.menu-item > * {
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+  padding: 10px;
+}
