--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ h2 {
   height: 50px;
   color: white;
 }
-
+/* change from here */
 .header li {
   display: inline-block;
   margin-right: 20px;
@@ -36,6 +36,7 @@ h2 {
 .header li a:hover {
   opacity: 0.7;
 }
+/* to here */
 
 .main {
   margin-top: 50px;
