--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,6 @@ h2 {
   height: 50px;
   color: white;
 }
-/* change from here */
 .header li {
   display: inline-block;
   margin-right: 20px;
@@ -36,7 +35,6 @@ h2 {
 .header li a:hover {
   opacity: 0.7;
 }
-/* to here */
 
 .main {
   margin-top: 50px;
@@ -72,4 +70,37 @@ h2 {
   font-size: 3em;
   text-align: center;
   padding: 10px;
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2em;
+  }
+
+  .menu-item {
+    height: 100px;
+  }
+
+  .menu-item > * {
+    font-size: 1.5em;
+    padding: 5px;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 1.5em;
+  }
+
+  .header li {
+    margin-right: 10px;
+  }
+
+  .menu-item {
+    height: 75px;
+  }
+
+  .menu-item > * {
+    font-size: 1em;
+  }
 }
